--- a/lesson4/css/menu1.css
+++ b/lesson4/css/menu1.css
@@ -1,36 +1,39 @@
+body{
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  font: normal 19px Impact;
+}
+
 .main-nav{
-  width: 900px;
+  width: 100%;
   height: 37px;
   background-color:#a64dff;
-  border-bottom: 1px solid #eeeeee;
-  padding:0;
-  margin:0;
+}
+ul{
+  margin: 0 auto;
+  padding: 0;
+  width: 900px;
+  text-align: center;
+  list-style-type: none;
+  text-transform: uppercase;
 }
 li{
   display:inline-block;
-  list-style-type: none;
-  text-transform: uppercase;
-  height: 100%;
-  padding: 8px 16px;
-  margin: 0px;
-  color: #9fa2b5;
-
 }
 li:hover{
   background-color: #eeeeee;
-  color: #9fa2b5;
 }
 .main-nav li a{
   display: block;
   text-decoration: none;
   color: #fff;
-  font: normal 19px Impact;
-  margin: 0px;
+  padding: 7px 20px;
 }
-
 .main-nav li a:hover{
   color: #9fa2b5;
 }
+
 /*.font-up{
   margin:30px;
   font:myfont;
