--- a/lesson6/css/task2.css
+++ b/lesson6/css/task2.css
@@ -9,7 +9,7 @@ body{
 }
 section{
   background-color: rgb( 48, 112, 168 );
-  width: 1402px;
+  width: 100%;
   height: 315px;
   text-align: center;
 }
@@ -24,6 +24,17 @@ h1{
 h1 span{
   color: rgb( 238, 129, 41 );
 }
+.comment{
+  display: inline-block;
+  box-sizing: border-box;
+  padding: 10px;
+  vertical-align: top;
+  border: 1px solid rgb( 224, 224, 224 );
+  background-color: rgb( 247, 247, 247 );
+  box-shadow: 0.5px 0.866px 2px 0px rgb( 0, 0, 0 );
+  width: 378px;
+  height: 96px;
+}
 .header{
   width:100%;
   display: inline-block;
@@ -34,16 +45,7 @@ h1 span{
   text-align: left;
   margin: 0;
 }
-.comment{
-  display: inline-block;
-  box-sizing: border-box;
-  padding: 10px;
-  border: 1px solid rgb( 224, 224, 224 );
-  background-color: rgb( 247, 247, 247 );
-  box-shadow: 0.5px 0.866px 2px 0px rgb( 0, 0, 0 );
-  width: 378px;
-  height: 96px;
-}
+
 .customer-name{
   /*display: inline-block;*/
   float: left;
@@ -78,5 +80,14 @@ hr{
 }
 .photo1{
   display: inline-block;
-  /*clip:;*/
+  margin: 0;
+  height: 96px;
+  width: 96px;
+  overflow: hidden;
+}
+.photo2{
+  margin:-5px;
+}
+.comment:before{
+
 }
